# CDDA-Map-Editor-v2

./: .gitignore  LICENSE  README.md  package-lock.json
.github/workflows/: publish.yaml
src/: index.html  package-lock.json  package.json  ts.config.js  tsconfig.json  vite.config.js
src-tauri/: Cargo.toml  cdda_update.txt  rustfmt.toml  tauri.conf.json  todo.md
src-tauri/capabilities/: default.json
src-tauri/cdda_lib/: Cargo.toml
src-tauri/cdda_lib/src/: lib.rs  types.rs
src-tauri/cdda_macros/: Cargo.toml
src-tauri/cdda_macros/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  main.rs  util.rs
src-tauri/src/cdda_data/: furniture.rs  io.rs  item.rs  map_data.rs  mod.rs  monster.rs  monster_group.rs  overmap.rs  palettes.rs  region_settings.rs  terrain.rs  vehicle_parts.rs  vehicles.rs
src-tauri/src/cdda_data/map_data/: mod.rs  nested.rs  update.rs
src-tauri/src/data/: io.rs  map_data.rs  mod.rs  monster.rs  monster_group.rs  palettes.rs  region_settings.rs  vehicle_parts.rs
src-tauri/src/editor_data/: handlers.rs  mod.rs
src-tauri/src/editor_data/tab/: handlers.rs  mod.rs
src-tauri/src/features/: mod.rs
src-tauri/src/features/cdda_data/: mod.rs
src-tauri/src/features/editor/: data.rs  handler.rs  io.rs  mod.rs
src-tauri/src/features/map/: importing.rs  mod.rs  place.rs
src-tauri/src/features/map/map_properties/: impl_property.rs  mod.rs
src-tauri/src/features/program_data/: handlers.rs  io.rs  keybinds.rs  mod.rs
src-tauri/src/features/tileset/: data.rs  handlers.rs  mod.rs
src-tauri/src/features/tileset/legacy_tileset/: data.rs  io.rs  mod.rs
src-tauri/src/features/tileset/legacy_tileset/fallback/: mod.rs  tile_config.json
src-tauri/src/features/toast/: mod.rs
src-tauri/src/features/viewer/: data.rs  handlers.rs  mod.rs
src-tauri/src/legacy_tileset/: handlers.rs  io.rs  mod.rs
src-tauri/src/legacy_tileset/tile_config/: mod.rs  reader.rs
src-tauri/src/map/: handlers.rs  importing.rs  io.rs  mod.rs  place.rs
src-tauri/src/map/map_properties/: impl_property.rs  mod.rs  representative.rs  visible.rs
src-tauri/src/map/viewer/: handlers.rs  mod.rs
src-tauri/src/map_data/: handlers.rs  importing.rs  io.rs  mod.rs
src-tauri/src/palettes/: io.rs  mod.rs
src-tauri/src/tab/: mod.rs
src-tauri/src/tileset/: handlers.rs  io.rs  mod.rs
src-tauri/src/tileset/current_tileset/: mod.rs
src-tauri/src/tileset/legacy_tileset/: mod.rs
src-tauri/src/tileset/legacy_tileset/tile_config/: mod.rs
src-tauri/test_data/: test_corpses.json  test_fill_ter.json  test_place.json  test_predecessor_mapgen.json  test_terrain.json  test_vehicles.json
src-tauri/test_data/mock_cdda_data/: itemgroups.json
src/public/: convert-to-map.py
src/public/shaders/: grid.frag  grid.vert
src/src/: app.scss  app.tsx  index.scss  index.tsx  main.scss  main.tsx  startupMain.scss  startupMain.tsx  theme.scss
src/src/components/: dropdown-group.tsx  dropdown.scss  dropdown.tsx  fieldset.scss  fieldset.tsx  header.scss  header.tsx  icon.tsx  multimenu.scss  multimenu.tsx  window.scss  window.tsx
src/src/components/mainScreens/: noTabScreen.scss  welcomeScreen.scss  welcomeScreen.tsx
src/src/features/editor/: index.ts  mapEditor.tsx
src/src/features/sprites/: atlasMaterial.ts  tilesheet.ts  tilesheets.ts
src/src/features/viewer/: mapViewer.scss  (+1 more)
src/src/hooks/: useEditor.tsx  useOuterClick.ts  useTabs.ts  useTheme.ts  useTheme.tsx  useTileset.ts  useViewer.tsx
src/src/lib/: editor_data.ts  index.ts  map_data.ts  project.ts
src/src/mainScreens/: mapEditor.tsx  noTabScreen.tsx  welcomeScreen.scss  welcomeScreen.tsx
src/src/rendering/: atlas-material.ts  atlasMaterial.ts  shaders.ts  texture-atlas.ts  tilesheet.ts  tilesheets.ts
src/src/windows/: generic-window.scss  generic-window.tsx  lib.tsx  useForeignOpenedTab.ts  useInitialData.ts
(+97 files in other folders)
