[package]
name = "cdda-map-editor-2"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cdda_map_editor_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-log = "2.2.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1", features = ["default"] }
image = { version = "0.25.5", features = ["serde"] }
glam = { version = "0.30.0", features = ["serde"] }
anyhow = "1.0.95"
log = "0.4.22"
directories = "6.0.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "macros"] }
walkdir = "2.5.0"
async-walkdir = "2.1.0"
rand = "0.9.0"
derive_more = { version = "2.0.1", features = ["full"] }
strum = "0.27.1"
strum_macros = "0.27.1"
dyn-clone = "1.0.19"
num-traits = "0.2.19"
lazy_static = "1.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
futures-lite = "2.6.0"
tokio-test = "0.4.4"
downcast-rs = "2.0.1"
async_once = "0.2.6"
dotenv = "0.15.0"
env_logger = "0.11.8"
paste = "1.0.15"