[package]
name = "cdda-map-editor-2"
version = "1.0.0-1"
description = "The CDDA Map Editor is a map editor for the Open-Source roguelike Cataclysm: Dark Days Ahead. It allows you to edit the Maps in an easy-to-use interface and receive instant feedback without having to reload the game or touch the underlying JSON Files."
authors = ["kartoffelbauer1000"]
edition = "2024"
readme = "../README.md"
repository = "https://github.com/Karto1000/CDDA-Map-Editor-v2"
homepage = "https://github.com/Karto1000/CDDA-Map-Editor-v2"
license = "CC-BY-4.0"
keywords = ["cdda", "map-editor", "cataclysm_dda"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cdda_map_editor_2_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = ["devtools"] }
tauri-plugin-shell = "2.2.1"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-log = "2.4.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["default", "preserve_order"] }
glam = { version = "0.30.3", features = ["serde"] }
anyhow = "1.0.98"
log = "0.4.27"
directories = "6.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt", "macros"] }
async-walkdir = "2.1.0"
rand = "0.9.0"
derive_more = { version = "2.0.1", features = ["full"] }
strum = "0.27.1"
strum_macros = "0.27.1"
dyn-clone = "1.0.19"
num-traits = "0.2.19"
lazy_static = "1.5.0"
indexmap = { version = "2.9.0", features = ["serde"] }
futures-lite = "2.6.0"
tokio-test = "0.4.4"
downcast-rs = "2.0.1"
async_once = "0.2.6"
dotenv = "0.15.0"
env_logger = "0.11.8"
paste = "1.0.15"
notify = { version = "8.0.0" }
notify-debouncer-full = "0.5.0"
rayon = { version = "1.10.0", features = [] }
cdda_lib = { path = "cdda_lib" }
cdda_macros = { path = "cdda_macros" }
comfy-bounded-ints = { version = "0.2.1", features = ["serde"] }
